- moved @Lordnibbler's contribution (flicker prevention in Chrome/WebKit) to the support/no-screen-flicker-in-chrome.css support file.
- do not force everyone who uses the nprogress LESS file to use the SourceSans font: it is loaded in the `index.html` example and you may do so too, but you should be able to pick your own font and not be bothered with this 'default'.

--- a/nprogress.css
+++ b/nprogress.css
@@ -1,9 +1,3 @@
-/* prevent webkit flicker when Nprogress.js nprogress.done() is called */
-html {
-  -webkit-backface-visibility: hidden;
-}
-
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,400italic);
 #nprogress {
   pointer-events: none;
   position: absolute;
